--- a/admin/planilhaitems.html
+++ b/admin/planilhaitems.html
@@ -36,7 +36,7 @@
             <div class="openmenumobile" onclick="abrirmenumobile()">
               <i class="fa-solid fa-bars"></i>
           </div>
-            <h1>Planilha Items</h1>
+            <h1>Planilha Itens</h1>
             <div class="profile">
                 <i class="fa-regular fa-bell" onclick="notificacaoopen()"></i>
                 <div class="profile-change" onclick="openmenuprofile()">
