--- a/index.html
+++ b/index.html
@@ -465,6 +465,26 @@
     </section>
 
     <div class='estoque-prata-index'>
+        <a href="prata/colar-elos-de-coracao.html">
+            <div class='item-prata'>
+                <img src="./imgs/COLAR-ELOS-DE-CORAÇÃO.webp" alt="">
+                <div class="text-prata">
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Colar Elos de Coração</h1>
+                    <div class='estrelas'>
+                        <img src="imgs/Nenhuma estrela.png" alt="">
+                    </div>
+                    <div class="promocao">
+                        <p class="preço-loja">R$ 100,00</p>
+                        <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                    </div>
+                    <div class="botaocomprarprata">
+                        <label>VER DETALHES</label>
+                    </div>
+                     
+                </div>
+            </div>
+        </a>
         <a href="prata/colar-ponto-de-luz-pink.html">
             <div class='item-prata'>
                 <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
@@ -485,17 +505,23 @@
                 </div>
             </div>
         </a>
-        <a href="prata/brinco-heart.html">
+
+    </div>
+
+
+
+    <div class='estoque-prata-index-pc'>
+        <a href="prata/colar-elos-de-coracao.html">
             <div class='item-prata'>
-                <img src="./imgs/brinco-coração.webp" alt="">
+                <img src="./imgs/COLAR-ELOS-DE-CORAÇÃO.webp" alt="">
                 <div class="text-prata">
                     <p class='novidade-loja'>Novo</p>
-                    <h1 class="nome-prata">Brinco Heart</h1>
+                    <h1 class="nome-prata">Colar Elos de Coração</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 50,00 -- 55,00</p>
+                        <p class="preço-loja">R$ 100,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -505,11 +531,6 @@
                 </div>
             </div>
         </a>
-    </div>
-
-
-
-    <div class='estoque-prata-index-pc'>
         <a href="prata/colar-ponto-de-luz-pink.html">
             <div class='item-prata'>
                 <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
@@ -561,26 +582,6 @@
                     </div>
                     <div class="promocao">
                         <p class="preço-loja">R$ 90,00</p>
-                        <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                    </div>
-                    <div class="botaocomprarprata">
-                        <label>VER DETALHES</label>
-                    </div>
-                     
-                </div>
-            </div>
-        </a>
-        <a href="prata/anel-coracao-cravejado.html">
-            <div class='item-prata'>
-                <img src="./imgs/ANEL-CORAÇÃO-CRAVEJADO.webp" alt="">
-                <div class="text-prata">
-                    <p class='novidade-loja'>Novo</p>
-                    <h1 class="nome-prata">Anel Coração Cravejado</h1>
-                    <div class='estrelas'>
-                        <img src="imgs/Nenhuma estrela.png" alt="">
-                    </div>
-                    <div class="promocao">
-                        <p class="preço-loja">R$ 75,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
