--- a/novidades.html
+++ b/novidades.html
@@ -172,6 +172,26 @@
         </section>
 
         <div class='estoque-prata'>
+            <a href="prata/colar-elos-de-coracao.html">
+                <div class='item-prata'>
+                    <img src="./imgs/COLAR-ELOS-DE-CORAÇÃO.webp" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Colar Elos de Coração</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 100,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="prata/colar-ponto-de-luz-pink.html">
                 <div class='item-prata'>
                     <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
@@ -456,7 +476,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/touca dupla face rosa e preta (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <p class='novidade-loja'>Novo</p>
                         <h1 class="nome-prata">Touca de Cetim Dupla Face Rosa e Preta</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
