--- a/admin/planilhaexpenses.html
+++ b/admin/planilhaexpenses.html
@@ -150,4 +150,5 @@
     <script src="script.js"></script>
     <script src="notifications.js"></script>
     <script src="controlexpenses.js"></script>
+    <script src="index.js"></script>
 </html>
