--- a/admin/planilhaitems.html
+++ b/admin/planilhaitems.html
@@ -152,4 +152,5 @@
     <script src="script.js"></script>
     <script src="planilha.js"></script>
     <script src="notifications.js"></script>
+    <script src="index.js"></script>
 </html>
