--- a/admin/index.html
+++ b/admin/index.html
@@ -103,7 +103,7 @@
                 </div>
             
                 <div>
-                    <div class="toptitlecard">
+                    <div class="toptitlecard pctitledisplayonly">
                         <h1>Visão Geral</h1>
                     </div>
                     <div class="blocks-contents">
