--- a/novidades.html
+++ b/novidades.html
@@ -168,6 +168,26 @@
         </section>
 
         <div class='estoque-prata'>
+            <a href="prata/anel-cravejado.html">
+                <div class='item-prata'>
+                    <img src="./imgs/anel-cravejado-_1_.webp" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Anel Cravejado</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 55,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="prata/colar-elos-de-coracao.html">
                 <div class='item-prata'>
                     <img src="./imgs/COLAR-ELOS-DE-CORAÇÃO.webp" alt="">
@@ -432,7 +452,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/Pulseira Veneziana (2).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Pulseira Veneziana</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -552,7 +572,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/brinco-argola-zirconia-cristais (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Estoque Renovado</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Brinco Argola Zircônia Cristais</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -572,13 +592,13 @@
                 <div class='item-prata'>
                     <img src="./imgs/Pulseira Coração (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Estoque Renovado</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Pulseira Coração</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 80,50</p>
+                            <p class="preço-loja"><s style="color: darkgray;">R$80,50</s> R$ 70,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -592,7 +612,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/piercing-fake-laço-cravejado (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Piercing Fake Laço Cravejado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
