--- a/pratas-pulseiras.html
+++ b/pratas-pulseiras.html
@@ -225,17 +225,18 @@
         </section>
 
         <div class='estoque-prata'>
-            <a href="prata/pulseira-veneziana.html">
+            <a href="prata/pulseira-detalhada.html">
                 <div class='item-prata'>
-                    <img src="./imgs/Pulseira Veneziana (2).jpeg" alt="">
+                    <img src="./imgs/Pulseira-Detalhada (2).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Pulseira Veneziana</h1>
+                        <p class='novidade-loja'>Disponível</p>
+                        <h1 class="nome-prata">Pulseira Detalhada</h1>
                         <div class='estrelas'>
-                            <img src="imgs/Nenhuma estrela.png" alt="">
+                            <img src="imgs/5 estrelas.png" alt="">
+                            <label>1</label>
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 30,00</p>
+                            <p class="preço-loja"><s style="color: darkgray;">R$ 115,00</s> R$ 70,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -249,13 +250,13 @@
                 <div class='item-prata'>
                     <img src="./imgs/Pulseira Coração (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Pulseira Coração</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 80,50</p>
+                            <p class="preço-loja"><s style="color: darkgray;">R$80,50</s> R$ 70,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -265,18 +266,17 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/pulseira-detalhada.html">
+            <a href="prata/pulseira-veneziana.html">
                 <div class='item-prata'>
-                    <img src="./imgs/Pulseira-Detalhada (2).jpeg" alt="">
+                    <img src="./imgs/Pulseira Veneziana (2).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
-                        <h1 class="nome-prata">Pulseira Detalhada</h1>
+                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <h1 class="nome-prata">Pulseira Veneziana</h1>
                         <div class='estrelas'>
-                            <img src="imgs/5 estrelas.png" alt="">
-                            <label>1</label>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja"><s style="color: darkgray;">R$ 115,00</s> R$ 70,00</p>
+                            <p class="preço-loja">R$ 30,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
