--- a/prata/pulseira-coracao.html
+++ b/prata/pulseira-coracao.html
@@ -143,9 +143,9 @@
                         </h2>
                             <a href="../institucional/guia-de-tamanhos/pulseiras.html" target="_blank"><u>Guia de Tamanhos</u></a>
                     </div>
-                    <label onclick="prata_pulseiracoracao_comp()"><i class="fas fa-shopping-bag"></i> COMPRAR</label>
-                    <label id='cart' onclick="prata_pulseiracoracao_enco()"><i class="fas fa-cart-plus"></i> ADICIONAR AO CARRINHO</label>
-                    <!--<label class="indisponivel" onclick="pulseira_coracao_indisponivel()"><i class="fas fa-shopping-bag"></i> AVISE-ME QUANDO CHEGAR</label>-->
+                    <!--<label onclick="prata_pulseiracoracao_comp()"><i class="fas fa-shopping-bag"></i> COMPRAR</label>
+                    <label id='cart' onclick="prata_pulseiracoracao_enco()"><i class="fas fa-cart-plus"></i> ADICIONAR AO CARRINHO</label>-->
+                    <label class="indisponivel" onclick="pulseira_coracao_indisponivel()"><i class="fas fa-shopping-bag"></i> AVISE-ME QUANDO CHEGAR</label>
                     <p id='entregue'>Este produto é vendido e entregue pela <a href=''>LARI'S</a>.</p>
 
                     <p class="compartilhar">Compartilhe: <a href='https://api.whatsapp.com/send/?text=https://laris-acessorios.netlify.app/prata/pulseira-coracao.html' target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a></p>
