--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
         <div class="pc-slider">
             <img onclick="window.open('novidades.html')" src="imgs/banner-diadosnamorados.webp"/>
             <img onclick="window.open('novidades.html')" src="imgs/banner-noviades.png"/>
-            <img onclick="window.open(`https://api.whatsapp.com/send/?phone=5535997394181&text&type=phone_number&app_absent=0`)" src="imgs/pedidos-personalizados.png"/>      
+            <img onclick="window.open('promocoes.html')" src="imgs/banner-promocoes.png"/>
+            <img onclick="window.open(`https://api.whatsapp.com/send/?phone=5535997394181&text&type=phone_number&app_absent=0`)" src="imgs/pedidos-personalizados.png"/>    
+
           </div>
     </section>
 
@@ -109,6 +111,7 @@
         <div class="cell-slider">
             <a href="novidades.html"><img src="imgs/banner-diadosnamorados-cell.webp"/></a>
             <a href="novidades.html"><img src="imgs/banner-noviades-1.png"/></a>
+            <a href="promocoes.html"><img src="imgs/banner-promocoes-cell.png"/></a>
             <a href="https://api.whatsapp.com/send/?phone=5535997394181&text&type=phone_number&app_absent=0"><img src="imgs/pedidos-personalizados-cell.png"/>  </a>
             
           </div>
