--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <section>
         <div class="title-index">
-            <h1 >$ PROMOÇÕES $</h1>
+            <h1 >PROMOÇÕES</h1>
             <a href="promocoes.html">VEJA TUDO ></a>
         </div>
     </section>
