--- a/pratas.html
+++ b/pratas.html
@@ -326,26 +326,6 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/tornozeleira-bolinha.html">
-                <div class='item-prata'>
-                    <img src="./imgs/Tornozeleira bolinha (1).jpeg" alt="">
-                    <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
-                        <h1 class="nome-prata">Tornozeleira Bolinha</h1>
-                        <div class='estrelas'>
-                            <img src="imgs/Nenhuma estrela.png" alt="">
-                        </div>
-                        <div class="promocao">
-                            <p class="preço-loja">R$ 50,00</p>
-                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                        </div>
-                        <div class="botaocomprarprata">
-                            <label>VER DETALHES</label>
-                        </div>
-                         
-                    </div>
-                </div>
-            </a>
             <a href="prata/trio-rosa-claro.html">
                 <div class='item-prata'>
                     <img src="./imgs/trio rosa claro (1).jpeg" alt="">
@@ -502,6 +482,26 @@
                         </div>
                         <div class="promocao">
                             <p class="preço-loja">R$ 13,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
+            <a href="prata/tornozeleira-bolinha.html">
+                <div class='item-prata'>
+                    <img src="./imgs/Tornozeleira bolinha (1).jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <h1 class="nome-prata">Tornozeleira Bolinha</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 50,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
