--- a/admin/planilhaexpenses.html
+++ b/admin/planilhaexpenses.html
@@ -91,7 +91,7 @@
                 </div>
                 <div>
                   <div class="totallabelvermelho">
-                    <label class="totallabel">Total:</label> R$
+                    <label class="totallabel">Saldo:</label> R$
                     <span class="total">0.00</span>
                   </div>
                 </div>
