--- a/admin/planilhaitems.html
+++ b/admin/planilhaitems.html
@@ -121,6 +121,10 @@
                         <label for="quantestoque">Quantidade Estoque</label>
                         <input type="number" id="quantestoque" />
                       </div>
+                      <div class="divlucroporitem boxitempla">
+                        <label for="lucroporitem">Lucro</label>
+                        <input type="number" id="lucroporitem" />
+                      </div>
                     </div>
 
 
@@ -138,7 +142,7 @@
                         <th class="columnPrecoCompra">Preço Compra</th>
                         <th class="columnPrecoRevenda">Preço Revenda</th>
                         <th class="columnQuantidadeCompra">Quantidade Compra</th>
-                        <th class="columnQuantidade Estoque">Quantidade Estoque</th>
+                        <th class="columnLucroItem Estoque">Lucro</th>
                         <th class="columnAction"></th>
                       </tr>
                     </thead>
