--- a/prata/brinco-heart.html
+++ b/prata/brinco-heart.html
@@ -118,6 +118,12 @@
                         <div>
                             <img onclick="brincoheart()" src="../imgs/brinco-coração.webp" alt="">
                         </div>
+                        <div>
+                            <img onclick="brincoheart2()" src="../imgs/brinco-coração (2).jpeg" alt="">
+                        </div>
+                        <div>
+                            <img onclick="brincoheart3()" src="../imgs/brinco-coração (3).jpeg" alt="">
+                        </div>
                     </div>
                     <div class="imagemprincipal">
                         <img src="../imgs/brinco-coração.webp" alt="">
